gcc/testsuite/rust/rustc/ui/parser/issue-20711.rs
struct Foo;

impl Foo {
    #[stable(feature = "rust1", since = "1.0.0")]
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {}

